  classes rather than interfaces. Remove all references to MediaWikiTitleCodec.
* A new abstract method, CentralIdLookup::lookupUserNamesWithFilter(), was
  added. This is a breaking change for extensions that extend this class.
* UserOptionsStore::fetchBatchForUserNames() was added. This is a breaking
  change for extensions that implement the interface.
* …

=== Deprecations in 1.44 ===

* Various static methods on ChangeTags, deprecated since 1.41, each now emit
  deprecation warnings. Use service access to the ChangeTagsStore instead:
  addTags(), defineTag(), deleteTagEverywhere(), getDisplayTableName(),
  getSoftwareTags(), getTags(), getTagsWithData(), listDefinedTags(),
  listExplicitlyDefinedTags(), listSoftwareActivatedTags(),
  listSoftwareDefinedTags(), makeTagSummarySubquery(), modifyDisplayQuery(),
  purgeTagCacheAll(), tagUsageStatistics(), and updateTags().
* WikiPage::doEditUpdates(), deprecated since 1.32, is now emitting warnings.
  Use DerivedPageDataUpdater::doUpdates() instead.
* IDatabase::setTransactionListener() is now deprecated without replacement.
* ILBFactory::setWaitForReplicationListener() is now deprecated without
  replacement.
* Maintenance::beginTransaction(), Maintenance::commitTransaction(),
  Maintenance::rollbackTransaction(), and Maintenance::waitForReplication()
  are now deprecated. Use Maintenance::*TransactionRound() instead.
* The ReverseArrayIterator class, unused since 1.32, has been deprecated.
* LinksUpdate::getImages() has been deprecated, like ParserOutput::getImages().
  Instead, use ParserOutput::getLinkList( ParserOutputLinkTypes::MEDIA ).
* ResourceLoader::makeConfigSetScript() is now deprecated. Consider using
  package files instead. Or, you can return "mw.config.set()" combined with
  RL\Context::encodeJson, if available. If not, use FormatJson::encode.
* BlockManager::getUserBlock(), deprecated since 1.42, now emits warnings.
* DatabaseBlock methods newFromRow(), delete(), insert(), update(),