@@ -19,11 +19,10 @@ interface MessageCacheFetchOverridesHook {
 	 * @since 1.41
 	 *
 	 * @param (string|callable)[] &$keys Message keys mapped to their override. Values may also be a
-	 *   callable that returns a message key. Callables are passed the message key,
-	 *   the MessageCache instance, a Language/StubUserLang object and a boolean indicating if the
-	 *   value should be fetched from the database. Note that strings will always be interpreted as
-	 *   a message key; this is not valid callable syntax! This prevents ambiguity between message keys and functions.
-	 *   Use Closure::fromCallable or another valid callable syntax.
+	 *   callable that returns a message key. Callables are passed the message key and the
+	 *   the MessageCache instance. Note that strings will always be interpreted as
+	 *   a message key; this is not valid callable syntax! This prevents ambiguity between message
+	 *   keys and functions. Use Closure::fromCallable or another valid callable syntax.
 	 */
 	public function onMessageCacheFetchOverrides( array &$keys ): void;
 }
