@@ -93,8 +93,7 @@ class MessageCacheTest extends MediaWikiLangTestCase {
 	 * @dataProvider provideMessagesForFallback
 	 */
 	public function testMessageFallbacks( $message, $langCode, $expectedContent ) {
-		$lang = $this->getServiceContainer()->getLanguageFactory()->getLanguage( $langCode );
-		$result = $this->getServiceContainer()->getMessageCache()->get( $message, true, $lang );
+		$result = $this->getServiceContainer()->getMessageCache()->get( $message, true, $langCode );
 		$this->assertEquals( $expectedContent, $result, "Message fallback failed." );
 	}
 
@@ -306,20 +305,15 @@ class MessageCacheTest extends MediaWikiLangTestCase {
 	 */
 	public function testLocalOverride( $messageKey ) {
 		$messageCache = $this->getServiceContainer()->getMessageCache();
-		$languageFactory = $this->getServiceContainer()->getLanguageFactory();
-		$languageZh = $languageFactory->getLanguage( 'zh' );
-		$languageZh_tw = $languageFactory->getLanguage( 'zh-tw' );
-		$languageZh_hk = $languageFactory->getLanguage( 'zh-hk' );
-		$languageZh_mo = $languageFactory->getLanguage( 'zh-mo' );
-		$oldMessageZh = $messageCache->get( $messageKey, true, $languageZh );
-		$oldMessageZh_tw = $messageCache->get( $messageKey, true, $languageZh_tw );
+		$oldMessageZh = $messageCache->get( $messageKey, true, 'zh' );
+		$oldMessageZh_tw = $messageCache->get( $messageKey, true, 'zh-tw' );
 
 		$localOverrideHK = $messageKey . '_zh-hk';
 		$this->makePage( ucfirst( $messageKey ), 'zh-hk', $localOverrideHK );
-		$this->assertEquals( $oldMessageZh, $messageCache->get( $messageKey, true, $languageZh ), 'Local override overlapped (main code)' );
-		$this->assertEquals( $oldMessageZh_tw, $messageCache->get( $messageKey, true, $languageZh_tw ), 'Local override overlapped' );
-		$this->assertEquals( $localOverrideHK, $messageCache->get( $messageKey, true, $languageZh_hk ), 'Local override failed (self)' );
-		$this->assertEquals( $localOverrideHK, $messageCache->get( $messageKey, true, $languageZh_mo ), 'Local override failed (fallback)' );
+		$this->assertEquals( $oldMessageZh, $messageCache->get( $messageKey, true, 'zh' ), 'Local override overlapped (main code)' );
+		$this->assertEquals( $oldMessageZh_tw, $messageCache->get( $messageKey, true, 'zh-tw' ), 'Local override overlapped' );
+		$this->assertEquals( $localOverrideHK, $messageCache->get( $messageKey, true, 'zh-hk' ), 'Local override failed (self)' );
+		$this->assertEquals( $localOverrideHK, $messageCache->get( $messageKey, true, 'zh-mo' ), 'Local override failed (fallback)' );
 	}
 
 	public static function provideLocalOverride() {
@@ -338,9 +332,8 @@ class MessageCacheTest extends MediaWikiLangTestCase {
 			MainConfigNames::RawHtmlMessages => [],
 		] );
 
-		$xss = $this->getServiceContainer()->getLanguageFactory()->getLanguage( 'x-xss' );
 		$message = $this->getServiceContainer()->getMessageCache()
-			->get( 'key', true, $xss );
+			->get( 'key', true, 'x-xss' );
 		if ( $expectXssMessage ) {
 			$this->assertSame(
 				"<script>alert('key')</script>\"><script>alert('key')</script><x y=\"(\$*)",
